--- a/app/assets/stylesheets/home/show.css
+++ b/app/assets/stylesheets/home/show.css
@@ -91,7 +91,22 @@
   background-color: cadetblue;
 }
 
-/* edit */
+/* edit-pull-down */
 .hidden {
   display: none;
+}
+
+.pull-down-edit-list {
+  padding: 15px 20px;
+  border: 1px solid #aa998a;
+  color: #aa998a;
+  font-weight: bold;
+  position: relative;
+  top: 13vh;
+  left: 20px;
+  margin-right: 30px;
+}
+
+.edit-lists {
+  position: absolute;
 }
