--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -11,8 +11,8 @@
       <% end %>
       <%= image_tag '34a08c028c70f36dbfafc205d16db1ff.png', class: "header-user-icon", id: "edit-lists"%>
       <ul class="edit-lists hidden" id="edit-pull-down">
-        <li class="pull-down-edit-list">ユーザー情報を編集</li>
-        <li class="pull-down-edit-list">アカウント情報を編集</li>
+        <li class="pull-down-edit-list"><%= link_to "ユーザー情報編集","#"%></li>
+        <li class="pull-down-edit-list"><%= link_to "アカウント情報編集","#"%></li>
       </ul>
     </nav>
   </header>
