--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <main class="user-edit">
   <section>
     <div class="user-edit-contents">
-      <h1 class="form-title">アカウント情報編集</h1>
+      <h1 class="form-title">ユーザー情報編集</h1>
 
       <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
       <%= render "devise/shared/error_messages", model: f.object %>
