--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -22,7 +22,7 @@
     <div class="mypage-contents">
     <%# ユーザー情報 %>
       <div class="mypage-top">
-        <%= image_tag "34a08c028c70f36dbfafc205d16db1ff.png" ,class: "mypage-user-icon"%>
+        <%= image_tag @user.account.images[0] ,class: "mypage-user-icon" if @user.account.images.attached?%>
         <div class="mypage-user-detail">
           <p class="mypage-nickname"><%=  @user.account.nickname%></p>
           <p class="mypage-account-id"><%=  @user.account.account_id%></p>
