アイコン修正

--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -22,7 +22,7 @@
 
 .header-user-icon {
   height: 70px;
-  width: auto;
+  width: 70px;
   border-radius: 50%;
   background-color: cornflowerblue;
   margin-right: 50px;
