--- a/app/views/devise/registrations/edit_account.html.erb
+++ b/app/views/devise/registrations/edit_account.html.erb
@@ -7,23 +7,26 @@
       <%# render "devise/shared/error_messages", model: f.object %>
         <div class="new-content">
           <%= f.label :nickname,'ニックネーム' %>
-          <%= f.text_field :nickname, class:"small-field", id:"name", placeholder:"例）スズキ", maxlength:"40", autofocus: true  %>
+          <%= f.text_field :nickname, class:"small-field", placeholder:"例）スズキ", maxlength:"40", autofocus: true  %>
         </div>
         <div class="new-content">
           <%= f.label :account_id,'アカウントID' %>
-          <%= f.text_field :account_id, class:"small-field", id:"name", placeholder:"例）suzuki1234", maxlength:"40", autofocus: true  %>
+          <%= f.text_field :account_id, class:"small-field", placeholder:"例）suzuki1234", maxlength:"40", autofocus: true  %>
         </div>
         <div class="new-content">
           <%= f.label :birthday,'誕生日' %>
-          <%= f.text_field :birthday, class:"small-field", id:"name", placeholder:"例）20000101", maxlength:"40", autofocus: true  %>
+          <%= f.text_field :birthday, class:"small-field", placeholder:"例）20000101", autofocus: true  %>
         </div>
         <div class="new-content">
           <%= f.label :introduction,'自己紹介' %>
-          <%= f.text_area :introduction, class:"small-field intro", id:"name", placeholder:"例）250文字以内", maxlength:"40", autofocus: true  %>
+          <%= f.text_area :introduction, class:"small-field intro", placeholder:"250文字以内", maxlength:"250", autofocus: true  %>
         </div>
         <div class="new-content">
           <%= f.label :images,'プロフィール画像' %>
-          <%= f.file_field :images, id:"name", placeholder:"例）鈴木太郎", maxlength:"40", autofocus: true  %>
+          <%= f.file_field :images %>
+        </div>
+        <div class="remove-img">
+          <p><%= f.check_box :remove_images %>画像を削除する</p>
         </div>
         <%= f.submit "次へ" ,class:"send" %>
       <%end%>
