--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "編集する", edit_post_path(@post), class: "regist-button" %>
     </div>
     <div class="regist-create-button">
-      <%= link_to "HOMEへ戻る", "#", class: "regist-button" %>
+      <%= link_to "HOMEへ戻る", home_path(current_user), class: "regist-button" %>
     </div>
     </div>
     
