--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,6 +8,6 @@
     <%= link_to new_post_path do %>
       <i class="far fa-images fa-lg user-icon"></i>
     <% end %>
-    <%= link_to image_tag('34a08c028c70f36dbfafc205d16db1ff.png', class: "header-user-icon"), home_path(current_user) %>
+    <%= link_to image_tag('profile-user.png', class: "header-user-icon"), home_path(current_user) %>
   </nav>
 </header>
