--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -10,10 +10,14 @@
       <%= link_to new_post_path do %>
         <i class="far fa-images fa-lg user-icon"></i>
       <% end %>
-      <%= image_tag @user.account.images[0], class: "header-user-icon", id: "edit-lists"%>
+      <%= image_tag @user.account.images[0], class: "header-user-icon", id: "edit-lists" if @user.account.images.attached?%>
+      <% if @user.account.images.length == 0%>
+        <%= image_tag "profile-user.png" ,class:"header-user-icon" ,id: "edit-lists" %>
+      <% end %>
       <ul class="edit-lists hidden" id="edit-pull-down">
         <li class="pull-down-edit-list"><%= link_to "ユーザー情報編集", edit_user_registration_path(@user) %></li>
         <li class="pull-down-edit-list"><%= link_to "アカウント情報編集", edit_account_path(@account)%></li>
+        <li class="pull-down-edit-list"><%= link_to "ログアウト", destroy_user_session_path, method: :delete%></li>
       </ul>
     </nav>
   </header>
@@ -24,7 +28,7 @@
       <div class="mypage-top">
         <%= image_tag @user.account.images[0] ,class: "mypage-user-icon" if @user.account.images.attached?%>
         <% if @user.account.images.length == 0%>
-          <%= image_tag "34a08c028c70f36dbfafc205d16db1ff.png" ,class: "mypage-user-icon" %>
+          <%= image_tag "profile-user.png" ,class: "mypage-user-icon" %>
         <% end %>
         <div class="mypage-user-detail">
           <p class="mypage-nickname"><%=  @user.account.nickname%></p>
