いいね欄位置修正

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,23 +22,25 @@
         <p><%= @post.caption %></p>
       </div>
 
-      <%# いいね機能練習 %>
-      <div class='show-sub-content' id='post_<%= @post.id %>'>
-        <% if current_user.liked?(@post.id) %>
-          <%= link_to post_like_path(@post), method: :delete, remote: true do %>
-            <i class="fas fa-heart"></i>
+      <div class="show-sub-contents">
+        <%# いいね機能練習 %>
+        <div class='show-sub-content' id='post_<%= @post.id %>'>
+          <% if current_user.liked?(@post.id) %>
+            <%= link_to post_like_path(@post), method: :delete, remote: true do %>
+              <i class="fas fa-heart"></i>
+            <% end %>
+          <% else %>
+            <%= link_to post_likes_path(@post), method: :post, remote: true do %>
+              <i class="far fa-heart"></i>
+            <% end %>
           <% end %>
-        <% else %>
-          <%= link_to post_likes_path(@post), method: :post, remote: true do %>
-            <i class="far fa-heart"></i>
-          <% end %>
-        <% end %>
-        <p>いいね<span class="good-count"><%= @post.likes.count %></span>件</p>
-      </div>
-      
-      <div class="show-sub-content">
-        <i class="far fa-comment"></i>
-        <p>コメント<%= @post.comments.count %>件</p>
+          <p>いいね<span class="good-count"><%= @post.likes.count %></span>件</p>
+        </div>
+        
+        <div class="show-sub-content">
+          <i class="far fa-comment"></i>
+          <p>コメント<%= @post.comments.count %>件</p>
+        </div>
       </div>
 
 
