--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -37,19 +37,20 @@
   text-align: end;
 }
 
+.show-sub-contents {
+  display: flex;
+  justify-content: center;
+}
+
 .show-sub-content {
   height: 5%;
-  width: 100%;
+  width: 10%;
   text-align: center;
   font-size: 15px;
   color: #aa998a;
   display: flex;
   justify-content: center;
   line-height: normal;
-}
-
-.show-sub-content > i {
-  margin: 0 0 10px 20px;
 }
 
 .show-caption-field {
