--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.index-main-contents {
+  display: flex;
+}
+
 .main-left {
   width: 75%;
   padding: 20px 80px 0px 80px;
@@ -9,7 +13,6 @@
 
 /* 投稿title */
 .post-title {
-  background-color: burlywood;
   height: 12vh;
   width: 100%;
   display: flex;
@@ -18,6 +21,7 @@
 .title-icon {
   height: 100%;
   width: 7vw;
+  border-radius: 50%;
   background-color: chocolate;
 }
 
@@ -40,9 +44,7 @@
 
 /* 投稿画像 */
 .post-pic {
-  background-color: darkgreen;
   width: 100%;
-  height: 100%;
   margin-bottom: 10px;
 }
 
@@ -90,4 +92,87 @@
   width: auto;
   max-width: 100%;
   justify-content: center;
+}
+
+/* ログインユーザー情報 */
+.main-right {
+  align-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  padding: 50px 40px 0px 40px;
+  width: calc(100% - 75%);
+  max-width: 100%;
+}
+
+.index-user-icon {
+  border-radius: 50%;
+  flex: none;
+  height: 230px;
+  width: 230px;
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.index-user-show,
+.index-pet-show {
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  width: 100%;
+  max-width: 100%;
+  margin: 20px 0 100px 0;
+}
+.user-show-nickname {
+  font-size: 17px;
+  font-weight: 400;
+  height: auto;
+  line-height: 1.4;
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+  justify-content: center;
+}
+
+.user-show-id,
+.user-show-birthday {
+  color: #aa998a;
+  font-size: 12px;
+  font-weight: 400;
+  height: auto;
+  line-height: 1.4;
+  text-align: center;
+  width: auto;
+  max-width: 100%;
+  justify-content: center;
+}
+
+.user-show-birthday {
+  margin-top: 10px;
+}
+
+.user-show-info {
+  align-content: center;
+  align-items: ceffffff;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  padding-top: 20px;
+  width: 100%;
+  max-width: 100%;
+  font-size: 13px;
+}
+
+.index-pet-icon {
+  border-radius: 50%;
+  flex: none;
+  height: 190px;
+  width: 190px;
+  max-width: 100%;
+  display: block;
+  margin: auto;
 }
