--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <%= render 'shared/header' %>
   <section class="index-main-contents">
     <%# 投稿一覧 %>
-    <div class="main-left">
+    <section class="main-left">
       <div class="post-title">
         <%= image_tag "profile-user.png" ,class: "title-icon"%>
         <div class="title-content">
@@ -20,7 +20,7 @@
       <div class="post-caption">
         <p>ここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプションここに投稿画像のキャプション</p>
       </div>
-    </div>
+    </section>
 
     <%# ユーザー情報 %>
     <section class="main-right">
@@ -37,21 +37,17 @@
       <%= image_tag "profile-user.png" ,class: "index-pet-icon"%>
       <div class="index-pet-show">
         <p class="pet-name">ペットの名前</p>
-          <dl class="pet-lists">
-            <dt>誕生日</dt>
-            <dd>2021年12月12日<dd>
-            <dt>種類</dt>
-            <dd>チワックス<dd>
-            <dt>好きなもの</dt>
-            <dd>お散歩<dd>
-            <dt>性格</dt>
-            <dd>おちゃめ<dd>
-          </dl>
+        <dl class="pet-lists">
+          <dt>誕生日</dt>
+          <dd>2021年12月12日<dd>
+          <dt>種類</dt>
+          <dd>チワックス<dd>
+          <dt>好きなもの</dt>
+          <dd>お散歩<dd>
+          <dt>性格</dt>
+          <dd>おちゃめ<dd>
+        </dl>
       </div>
-
-
     </section>
-    <div></div>
-    <div></div>
   </section>
 </main>
