ヘッダー修正

--- a/app/views/devise/registrations/create_account.html.erb
+++ b/app/views/devise/registrations/create_account.html.erb
@@ -8,7 +8,7 @@
       <p>wanday!のサービスをお楽しみください。</p>
     </div>
     <div class="regist-create-button">
-      <%= link_to "TOPページへ", home_path(current_user), class: "regist-top-link" %>
+      <%= link_to "TOPページへ", posts_path, class: "regist-top-link" %>
     </div>
 
   </section>
