--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -3,7 +3,7 @@
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
     <nav>
-      <i class="fas fa-home fa-lg user-icon"></i>
+      <%= link_to posts_path do %><i class="fas fa-home fa-lg user-icon"></i><% end %>
       <i class="fas fa-search fa-lg user-icon"></i>
       <i class="far fa-envelope fa-lg user-icon"></i>
       <i class="far fa-bell fa-lg user-icon"></i>
