リンク先修正

--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -7,10 +7,11 @@
       <%= link_to "編集する", edit_post_path(@post), class: "regist-button" %>
     </div>
     <div class="regist-create-button">
-      <%= link_to "HOMEへ戻る", home_path(current_user), class: "regist-button" %>
+      <%= link_to "HOMEへ戻る", posts_path, class: "regist-button" %>
     </div>
     </div>
     
   </section>
   <%= render 'shared/footer' %>
 </main>
+
