--- a/app/assets/stylesheets/home/show.css
+++ b/app/assets/stylesheets/home/show.css
@@ -63,6 +63,26 @@
   text-align: center;
 }
 
+/* いいね・一覧画面切り替え */
+.mypage-icon-lists {
+  border-top: solid 1px #eadfca;
+  width: 100%;
+  height: 10vh;
+  padding: 0 200px;
+}
+
+.mypage-icon-list {
+  width: 100%;
+  display: flex;
+  height: 100%;
+}
+
+.mypage-icon-list > li {
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+
 /* 画像一覧 */
 .mypage-middle {
   display: flex;
