--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,5 @@
 <main class="mypage">
-<%# console%>
+<% console%>
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
     <nav>
@@ -43,6 +43,15 @@
           <p>フォロワー 30</p>
         </div>
       </div>
+
+    <%# いいね・一覧画面切り替え %>
+    <div class="mypage-icon-lists">
+      <ul class="mypage-icon-list">
+        <li><i class="fas fa-image fa-2x"></i></li>
+        <li><i class="fas fa-heart fa-2x"></i></li>
+      </ul>
+    </div>
+
     <%# 画像一覧 %>
       <div class="mypage-middle">
         <ul class="img-lists">
