--- a/app/views/home/like_list.html.erb
+++ b/app/views/home/like_list.html.erb
@@ -47,19 +47,20 @@
     <%# いいね・一覧画面切り替え %>
     <div class="mypage-icon-lists">
       <ul class="mypage-icon-list">
-        <li><i class="fas fa-image fa-2x"></i></li>
+        <%= link_to home_path(@user) do %>
+          <li><i class="fas fa-image fa-2x"></i></li>
+        <% end %>
         <li><i class="fas fa-heart fa-2x"></i></li>
       </ul>
     </div>
 
-    <%# 画像一覧 %>
-    いいね一覧
+    <%# いいねした投稿一覧 %>
       <div class="mypage-middle">
         <ul class="img-lists">
-          <% @user.posts.each do |post|%>
+          <% @likes.each do |like|%>
             <li>
-              <%= link_to post_path(post) do %>
-                <%= image_tag post.images[0], class: "mypage-img" %>
+              <%= link_to post_path(like) do %>
+                <%= image_tag like.post.images[0], class: "mypage-img" %>
               <% end %>
             </li>
           <% end %>
