--- a/app/views/home/like_list.html.erb
+++ b/app/views/home/like_list.html.erb
@@ -48,9 +48,9 @@
     <div class="mypage-icon-lists">
       <ul class="mypage-icon-list">
         <%= link_to home_path(@user) do %>
-          <li><i class="fas fa-image fa-2x"></i></li>
+          <li class="icon-select"><i class="far fa-image fa-2x"></i></li>
         <% end %>
-        <li><i class="fas fa-heart fa-2x"></i></li>
+        <li class="icon-select"><i class="fas fa-heart fa-2x"></i><p>いいねした投稿一覧</p></li>
       </ul>
     </div>
 
