--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -47,9 +47,9 @@
     <%# いいね・一覧画面切り替え %>
     <div class="mypage-icon-lists">
       <ul class="mypage-icon-list">
-        <li><i class="fas fa-image fa-2x"></i></li>
+        <li class="icon-select"><i class="fas fa-image fa-2x"></i><p>投稿一覧</p></li>
         <%= link_to home_likes_path(@user) do %>
-          <li><i class="fas fa-heart fa-2x"></i></li>
+          <li class="icon-select"><i class="far fa-heart fa-2x"></i></li>
         <%end%>
       </ul>
     </div>
