フォローボタン修正

--- a/app/assets/stylesheets/home/show.css
+++ b/app/assets/stylesheets/home/show.css
@@ -46,7 +46,33 @@
   padding: 30px 50px;
 }
 
-.mypage-user-follow > button {
+.follow-button {
+  background-color: #9ec3bc;
+  color: white;
+  height: 30px;
+  line-height: 30px;
+  width: 100%;
+  text-align: center;
+  border-radius: 16px;
+  font-size: 15px;
+  display: block;
+  margin-bottom: 50px;
+}
+
+.unfollow-button {
+  border: solid 1px;
+  color: #9ec3bc;
+  height: 30px;
+  line-height: 30px;
+  width: 100%;
+  text-align: center;
+  border-radius: 16px;
+  font-size: 15px;
+  display: block;
+  margin-bottom: 50px;
+}
+
+/* .mypage-user-follow > button {
   background-color: #9ec3bc;
   color: white;
   height: 20%;
@@ -55,7 +81,7 @@
   border-radius: 16px;
   font-size: 15px;
   margin-bottom: 50px;
-}
+} */
 
 .mypage-user-follow > p {
   font-size: 12px;
