--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -37,18 +37,16 @@
           <%=  @user.account.introduction %>
           </p>
         </div>
+
+        <%# フォローボタン %>
         <div class="mypage-user-follow">
-          <button>フォローする</button>
+          <% if current_user.following?(@user) %>
+            <%= link_to "Unfollow", relationships_path(user_id: @user.id), method: :delete,class: "unfollow-button"%>
+          <% else %>
+            <%= link_to "Follow", relationships_path(user_id: @user.id), method: :post, class: "follow-button"%>
+          <% end %>
           <p>フォロー 10</p>
           <p>フォロワー 30</p>
-
-
-          <% if current_user.following?(@user) %>
-            <%= link_to "Unfollow", relationships_path(@user.id), method: :delete %>
-          <% else %>
-            <%= link_to "Follow", relationships_path(@user.id), method: :post %>
-          <% end %>
-          
         </div>
       </div>
 
