部分テンプレート適用

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,31 +23,6 @@
     </section>
 
     <%# ユーザー情報 %>
-    <section class="main-right">
-      <%# ログインユーザープロフィール %>
-      <%= image_tag current_user.account.images[0] ,class: "index-user-icon"%>
-      <div class="index-user-show">
-       <p class="user-show-nickname"><%= current_user.account.nickname %></p>
-       <p class="user-show-id"><%= current_user.account.account_id %></p>
-       <p class="user-show-birthday"><%= current_user.account.birthday %></p>
-       <p class="user-show-info"><%=  current_user.account.introduction %></p>
-      </div>
-
-      <%# ペットプロフィール %>
-      <%= image_tag "profile-user.png" ,class: "index-pet-icon"%>
-      <div class="index-pet-show">
-        <p class="pet-name">ペットの名前</p>
-        <dl class="pet-lists">
-          <dt>誕生日</dt>
-          <dd>2021年12月12日<dd>
-          <dt>種類</dt>
-          <dd>チワックス<dd>
-          <dt>好きなもの</dt>
-          <dd>お散歩<dd>
-          <dt>性格</dt>
-          <dd>おちゃめ<dd>
-        </dl>
-      </div>
-    </section>
+    <%= render 'shared/userpro'%>
   </section>
 </main>
