--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -20,6 +20,11 @@
           <p><%= @item.explanation %></p>
         </div>
       </div>
+      <div class="item-button-lists">
+        <%= link_to "商品情報編集", edit_item_path(@item), class: "item-edit-buttton" %>
+        <%= link_to "商品情報削除", item_path(@item), class: "item-edit-buttton", method: :delete %>
+      </div>
+
 
       <%# レビュー一覧 %>
       <ul class="item-reviews">
