--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,9 +2,12 @@
   <p class="header-title1">wanday!</p>
   <nav>
     <%= link_to posts_path do %><i class="fas fa-home fa-lg user-icon"></i><% end %>
-    <i class="fas fa-search fa-lg user-icon"></i>
+    <%# <i class="fas fa-search fa-lg user-icon"></i>
     <i class="far fa-envelope fa-lg user-icon"></i>
-    <i class="far fa-bell fa-lg user-icon"></i>
+    <i class="far fa-bell fa-lg user-icon"></i> %>
+    <%= link_to items_path do %>
+      <i class="fas fa-clipboard-list fa-lg user-icon"></i>
+    <% end %>
     <%= link_to new_post_path do %><i class="far fa-images fa-lg user-icon"></i><% end %>
       <%= link_to image_tag(current_user.account.images[0], class: "header-user-icon"), home_path(current_user) if current_user.account.images.attached?%>
       <% if current_user.account.images.length == 0%>
