--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,5 +1,5 @@
 <main class="mypage">
-<% console%>
+<%# console%>
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
     <nav>
