ルーティング設定

--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -45,6 +45,11 @@
   margin: 0 0 20px 10px;
 }
 
+.review-add-button {
+  display: flex;
+  justify-content: flex-end;
+}
+
 /* レビュー一覧 */
 .item-reviews {
   width: 100%;
