--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -1,5 +1,4 @@
 .posts-new {
-  /* height: 100vh; */
   width: 100%;
 }
 
@@ -27,13 +26,13 @@
 
 /* 画像 */
 .img-field {
-  height: 200px;
   margin-bottom: 50px;
   padding: 0px 100px 0px 100px;
   text-align: center;
   display: flex;
   align-items: center;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .edit-images,
@@ -54,9 +53,10 @@
   color: #aa998a;
 }
 
-.preview-image {
-  height: auto;
-  max-width: 180px;
+#image-list img {
+  width: 200px;
+  margin: 10px;
+  border: solid 1px silver;
 }
 
 .click-upload {
@@ -69,7 +69,6 @@
 }
 
 .posts-new-contents {
-  height: calc(100vh - 20vh);
   width: 100%;
   padding-top: 50px;
 }
