--- a/app/views/home/like_list.html.erb
+++ b/app/views/home/like_list.html.erb
@@ -1,5 +1,4 @@
 <main class="mypage">
-<%# console%>
   <header class='top-page-header1'>
     <p class="header-title1">wanday!</p>
     <nav>
@@ -38,9 +37,13 @@
           </p>
         </div>
         <div class="mypage-user-follow">
-          <button>フォローする</button>
-          <p>フォロー 10</p>
-          <p>フォロワー 30</p>
+          <% if current_user.following?(@user) %>
+            <%= link_to "Unfollow", relationships_path(user_id: @user.id), method: :delete,class: "unfollow-button"%>
+          <% else %>
+            <%= link_to "Follow", relationships_path(user_id: @user.id), method: :post, class: "follow-button"%>
+          <% end %>
+          <p>フォロー <%= @user.followings.count %></p>
+          <p>フォロワー <%= @user.followers.count %></p>
         </div>
       </div>
 
@@ -48,9 +51,9 @@
     <div class="mypage-icon-lists">
       <ul class="mypage-icon-list">
         <%= link_to home_path(@user) do %>
-          <li class="icon-select"><i class="far fa-image fa-2x"></i></li>
+          <li class="icon-select"><i class="far fa-image fa-2x"></i><p class="unchoice-icon">投稿一覧</p></li>
         <% end %>
-        <li class="icon-select"><i class="fas fa-heart fa-2x"></i><p>いいねした投稿一覧</p></li>
+        <li class="icon-select"><i class="fas fa-heart fa-2x choice-icon"></i><p class="choice-icon-info">いいね一覧</p></li>
       </ul>
     </div>
 
